Added the tracy page

--- a/scr/tracy.html
+++ b/scr/tracy.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <P>I am a git beginner</P>
-    <p>I love rythms and blues</p>
+    <p>I am a git beginner
+        
+    </p>
 </body>
 </html>
