FEATURE: I have added the hobie page

--- a/scr/tracy.html
+++ b/scr/tracy.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p>I am a git beginner
-        
-    </p>
+    <p>I am a git beginner</p>
+    <p>I love python</p>
+
+
+    
 </body>
 </html>
